--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-nextjs-tailwind-starter",
+  "name": "na-am-stats",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,49 +18,60 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.26.9",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "clsx": "^2.1.0",
-    "date-fns": "^3.3.1",
+    "@floating-ui/react": "^0.26.19",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "chart.js": "^4.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lodash-es": "^4.17.21",
-    "lucide-react": "^0.314.0",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "lucide-react": "^0.400.0",
+    "next": "^14.2.4",
+    "next-themes": "^0.3.0",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.1",
+    "react-resize-observer": "^1.1.1",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.5.0",
-    "@commitlint/config-conventional": "^18.5.0",
-    "@next/eslint-plugin-next": "^14.2.3",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@next/eslint-plugin-next": "^14.2.4",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.2.48",
-    "@types/riot-games-api": "^0.0.33",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "autoprefixer": "^10.4.17",
-    "daisyui": "^4.6.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
+    "@types/react": "^18.3.3",
+    "@types/riot-games-api": "^0.0.34",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.2.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "husky": "^9.0.1",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.0",
-    "next-router-mock": "^0.9.11",
+    "lint-staged": "^15.2.7",
+    "next-router-mock": "^0.9.13",
     "next-sitemap": "^4.2.3",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "standard": "^17.1.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -70,5 +81,6 @@
     "**/*.{json,css,scss,md,webmanifest}": [
       "prettier -w"
     ]
-  }
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
