Add stats table, runes, and graphs to match history (#8)
* refactor: Update styling

* feat: add mobile support

* feat: add gold graph

* feat: add overview page

* fix: fix type error

* fix: fix build path screen width

* feat: update error pages

* refactor: add jsdocs and clean up imports

* refactor: fix warnings and optimize page and image loading

* feat: added responsive resizing option to ChampIcon

* feat: add stat table

* feat: add variable dot sizes to event timeline

* feat: add rune page to builds

* feat: add graphs page

* feat: add kill and assist graph

* feat: add laning stats to table

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "precommit": "pnpm run lint:strict && pnpm run typecheck && pnpm run format:check && pnpm run test"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.19",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.1",
@@ -39,6 +41,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-resize-observer": "^1.1.1",
+    "sharp": "^0.33.4",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
